--- a/public/styles.css
+++ b/public/styles.css
@@ -30,19 +30,21 @@ h1 {
 }
 
 .route-holder a {
-  flex-grow: 2;
   background-color: #80e5ff;
   padding: 1rem;
   color: #222;
   letter-spacing: 0.1rem;
+  width: 45%;
+  box-sizing: border-box;
 }
 
 .params {
-  flex-grow: 1;
   background-color: #4ddbff;
   color: #333;
   padding: 1rem;
   font-size: 1.2rem;
+  width: 30%;
+  box-sizing: border-box;
 }
 
 .params span {
@@ -54,11 +56,13 @@ h1 {
 }
 
 .return {
-  flex-grow: 1;
   background-color: #80e5ff;
   color: #222;
   padding: 1rem;
   font-size: 1.2rem;
+  margin-left: auto;
+  width: 25%;
+  box-sizing: border-box;
 }
 
 .description {
@@ -66,6 +70,7 @@ h1 {
   padding: 2rem 1rem;
   font-size: 1.2rem;
   background-color: #1ad1ff;
+  border-top: 1px solid #000;
 }
 
 .description .required {
